--- a/src/android/barcodescanner.gradle
+++ b/src/android/barcodescanner.gradle
@@ -6,7 +6,7 @@ repositories{
 }
 
 dependencies {
-    compile(name:'barcodescanner-release', ext:'aar')
+    implementation(name:'barcodescanner-release', ext:'aar')
 }
 
 android {
